--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -1,4 +1,4 @@
-<div class="hero" style="background-image: url( {{ hero_image }} );">
+<div class="hero" style="background-image: url( {{ _site_root }}{{ hero_image }} );">
 	<h1>{{ tag_line }}</h1>
 	<h3>{{ sub_tag_line}}</h3>
 	<a href="{{ url }}properties" class="btn btn-garfield">View Properties</a>
