path src test on images

--- a/statamic/_themes/main/partials/property_tile.html
+++ b/statamic/_themes/main/partials/property_tile.html
@@ -1,7 +1,7 @@
 
 <div class="col-md-4">
 	<a href="{{ url }}" class="property_box">
-		<img path src="{{ preview_image }}">
+		<img src="{{ path src="{{ preview_image }}" }}" >
 		<div class="property_tile_info">
 			<div class="top-info">
 				<h3>{{ title }}</h3>
