--- a/statamic/_themes/main/partials/properties_grid.html
+++ b/statamic/_themes/main/partials/properties_grid.html
@@ -1,7 +1,7 @@
 {{ entries:listing folder="properties/sale" }}
 <div>
 	<a href="{{ url }}" class="property_box">
-		<img src="{{ _site_root }}{{ preview_image }}">
+		<img src="{{ path src="{{ preview_image }}" }}" >
 		<div class="property_tile_info">
 			<div class="top-info">
 				<h3>{{ title }}</h3>
