--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -73,7 +73,7 @@
 				{{ entries:listing folder="properties/sale" conditions="featured:yes"}}
 				<div>
 					<a href="{{ url }}" class="property_box slick">
-						<img src="{{ _site_root }}{{ preview_image }}">
+						<img src="{{ path src="{{ preview_image }}" }}" >
 						<div class="property_tile_info">
 							<div class="top-info">
 								<h3>{{ title }}</h3>
