react select styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 // third-party
 @import 'third-party/_slick.scss';
 @import 'third-party/_semantic_dropdown.scss';
+@import 'third-party/_react-select.scss';
 // components
 @import 'components/_variables.scss';
 @import 'components/_global.scss';
