--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -70,7 +70,7 @@
 		<div class="row">
 			<div class="property_tile">
 				
-				{{ entries:listing folder="properties/sale" conditions="featured:yes"}}
+				{{ entries:listing folder="properties/sale_properties" }}
 				<div>
 					<a href="{{ url }}" class="property_box slick">
 						<img src="{{ path src="{{ preview_image }}" }}" >
