--- a/statamic/_themes/main/templates/property_individual.html
+++ b/statamic/_themes/main/templates/property_individual.html
@@ -20,6 +20,17 @@
 
 				</div>
 				<div class="dotted"></div>
+				<div class="property-downloads">
+					<a href="">
+						{{ theme:partial src="svg/download" }}
+						<span>Download</span>
+					</a>
+					<a href="">
+						{{ theme:partial src="svg/floorplans" }}
+						<span>Floorplans</span>
+					</a>
+				</div>
+				<div class="dotted"></div>
 				</aside>
 
 				<main>
