--- a/src/scss/components/_property_individual.scss
+++ b/src/scss/components/_property_individual.scss
@@ -53,7 +53,7 @@
 		margin-bottom: 10px;
 	}
 	.agent-block {
-		margin-bottom: 30px;
+		margin-bottom: 20px;
 		@include span (100%);
 	}
 	.agent-image {
@@ -77,6 +77,24 @@
 		height: 25px;
 		width: 25px;
 	}
+}
+
+.property-downloads {
+	@include span(full);
+	a {
+		@include gallery(1 of 2 after);
+		margin-bottom: 20px;
+	}
+	svg, span {
+		vertical-align: middle;
+	}
+	svg {
+		margin-right: 5px;
+		display: inline-block;
+		width: 40px;
+		height: 40px;
+	}
+	
 }
 
 .summary {
