fixed agent details

--- a/statamic/_themes/main/templates/property_individual.html
+++ b/statamic/_themes/main/templates/property_individual.html
@@ -9,7 +9,7 @@
 						<div class="agent-block">
 							<a class="agent-image" href="{{ url }}"><img src="{{ transform src="{{ image }}" width="300" }}" class="img-circle" /></a>
 							<div class="agent-details">
-								<a href="{{ url"><h3>{{ title }}</h3></a>
+								<a href="{{ url }}"><h3>{{ title }}</h3></a>
 								<ul>
 									<li>{{ theme:partial src="svg/phone" }} {{ phone }}</li>
 									<li>{{ theme:partial src="svg/mail" }} {{ email|link }}</li>
