--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -23,8 +23,8 @@ html,body {
 
 body {
 	min-height: 100%;
-	// display: flex;
-	// flex-direction: column;
+	display: flex;
+	flex-direction: column;
 	margin: 0;
 	// margin-bottom: -230px;
 
