changed staging yaml

--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -11,6 +11,7 @@
 					<div class="no-hover">
 						<div class="circle"></div>
 						<h4>Our Story</h4>
+
 					</div>
 					<div class="hover">
 						<span class="title">Our Story</span>
@@ -66,6 +67,9 @@
 				{{ theme:partial src="svg/home_building" }}
 			</div>
 			<h4>Featured Properties</h4>
+				{{ relate:agents }}
+			    {{ title }}
+			  {{ /relate:agents }}
 		</div>
 		<div class="container">
 				<div class="property_tile">
