--- a/statamic/_themes/main/templates/property_individual.html
+++ b/statamic/_themes/main/templates/property_individual.html
@@ -16,7 +16,11 @@
 								</ul>
 							</div>
 						</div>
-					{{ /relate:agents}}
+					{{ /relate:agents }}
+
+			  {{ relate:agents }}
+			    {{ url }}
+			  {{ /relate:agents }}
 
 				</div>
 				<div class="dotted"></div>
