--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -36,7 +36,7 @@ a {
   text-decoration: none;
   color: $base-font-color;
   &:hover,&:focus {
-    color: $base-font-color;
+    color: $text-green;
     text-decoration: none;
   }
 }
