read more button on property pages fixed

--- a/statamic/_themes/main/templates/property_individual.html
+++ b/statamic/_themes/main/templates/property_individual.html
@@ -56,12 +56,7 @@
 										<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
 									</span>
 								</a>
-								<a href="">
-									<span class="fa-stack fa-lg">
-										<i class="fa fa-circle fa-stack-2x"></i>
-										<i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
-									</span>
-								</a>
+
 								<a href="">
 									<span class="fa-stack fa-lg">
 										<i class="fa fa-circle fa-stack-2x"></i>
@@ -186,7 +181,7 @@
 						{{ if summary_intro|not_empty }}
 						<div class="summary">
 							{{ summary_intro }}
-							<a id="summary_expander" href=""><i id="summary_icon" class="fa fa-plus-circle"></i><span>Read More</span></a>
+							<a id="summary_expander" href=""><i id="summary_icon" class="fa fa-plus-circle"></i><span class="read-more">Read More</span></a>
 							<div id="summary_expanded" style="display: none">{{ summary_full }}</div>
 						</div>
 						{{ endif }}
